<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ПРОФЙ-А</string>
    <string name="start">СТАРТ</string>
    <string name="authorize">Авторизоваться</string>
    <string name="demo_mode_3_days">Режим демо на 3 дня</string>
    <string name="choose_cabinet">Выбрать кабинет</string>
    <string name="choose_cabinet_subtitle">Профи или ИП / ООО</string>
    <string name="recent_projects">Последние проекты</string>
    <string name="no_projects">У вас пока нет проектов</string>
    <string name="add_project">Добавить проект</string>
    <string name="back">Назад</string>
    <string name="save">Сохранить</string>
    <string name="create">Создать</string>
    <string name="menu">Меню</string>
    
    <!-- Create Project -->
    <string name="last_name">Фамилия *</string>
    <string name="first_name">Имя *</string>
    <string name="middle_name">Отчество</string>
    <string name="address">Адрес *</string>
...
    <string name="work_category_hint">Добавляйте выбранные виды работ в разделе «Комната» при редактировании помещения проекта.</string>
    <string name="work_category_empty">В справочнике нет работ для этой категории.</string>
    <string name="content_desc_add_to_templates">Добавить в мои шаблоны</string>
    <string name="room_types">Виды комнат</string>
    <string name="stages">Этапы</string>
    <string name="subscription">Подписка</string>
    <string name="support">Тех. поддержка</string>
    <string name="about">О приложении</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="share_app_text">Скачайте приложение ПРОФЙ-А для составления смет и актов: https://play.google.com/store/apps/details?id=ru.profia.app</string>
    <string name="my_profile">Личный кабинет</string>
    <string name="my_projects">Мои проекты</string>
    <string name="download_apk_link">Скачать приложение (APK)</string>
...
